--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "homepage": "https://wswendy.github.io/TextEditor/",
+    "scripts": {
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+    }
   }
 }
