--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react-scripts": "5.0.1",
     "react-sortable-hoc": "^2.0.0"
   },
+  "homepage": "https://wswendy.github.io/TextEditor",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -24,11 +27,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://wswendy.github.io/TextEditor/",
-    "scripts": {
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build"
-    }
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
